# wildtype-aligner

./: .gitignore  LICENSE  OPTIMIZATION_SUMMARY.md  PROGRESS_SUMMARY.md  README.md  pyproject.toml  setup.cfg  test_error_handling.py
.github/workflows/: ci.yml
src/wildtype_aligner/: __init__.py  cli.py  engine.py
src/wildtype_aligner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_batch_alignment_mocked.py  test_entrez_reference_selection.py
