[metadata]
name = wildtype-aligner
version = 0.1.0
description = A bioinformatics tool for reference-driven pairwise sequence alignments
author = Vihaan Kulkarni
author_email = vihaan.kulkarni@wildtypealigner.com

[options]
packages = find:
package_dir =
    = src
install_requires =
    biopython

[options.packages.find]
where = src